Change App min-height to height to fix overflow

--- a/src/App.scss
+++ b/src/App.scss
@@ -5,7 +5,7 @@ body {
 .App {
   display: flex;
   flex-direction: column;
-  min-height: 100vh;
+  height: 100vh;
 }
 
 main {
@@ -17,3 +17,4 @@ main {
   position: sticky;
   top: 0;
 }
+
